--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
          <a href="contact.html">Contact</a>
      </nav>    
     </header>
-    <section class="title-container">
+    <section style="background-image: url(/assets/home.png);"class="title-container">
                <h1>50 Influential Artists</h1>
+               <style>{"background-image: url(/assets/home.png);"}</style>
                <button>Contact Us</button>
           
         <hr>
